# c-algorithms

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  flake.nix
algorithms/: CMakeLists.txt
algorithms/include/algo/: sorting.h
algorithms/src/sorting/: compare.c  insertion_sort.c  merge_sort.c
data_structures/: CMakeLists.txt
data_structures/include/ds/: list.h
data_structures/src/: assert.h  utils.c  utils.h
data_structures/src/array/: array.c
data_structures/src/list/: list.c  print.c  unsafe.h
examples/: CMakeLists.txt
examples/src/: compare.c  main.c
libs/algorithms/: CMakeLists.txt
libs/algorithms/include/algo/: search.h  sort.h
libs/algorithms/src/search/: binary_search.c  equals.c  has_two_sum.c  result.c  result.h  search_result.c
libs/algorithms/src/sort/: compare.c  insertion_sort.c  merge_sort.c
libs/compare/: CMakeLists.txt
libs/compare/include/compare/: core.h  defaults.h
libs/compare/src/core/: default.c  default.h  new.c  operations.c
libs/compare/src/defaults/: compare_funcs.c  compare_funcs.h  new.c
libs/data_structures/: CMakeLists.txt
libs/data_structures/include/ds/: list.h
libs/data_structures/include/ds/list/: core.h  defaults.h  print.h
libs/data_structures/src/list/: core.c  default.c  defaults.c  list.c  print.c  unsafe.h
libs/utils/: CMakeLists.txt
libs/utils/src/: allocation.c
libs/utils/src/utils/: allocation.c  memory.h
tests/: CMakeLists.txt
tests/algorithms/: test_insertion_sort.c
tests/algorithms/search/: test_binary_search.c  test_has_two_sum.c
tests/algorithms/sort/: test_insertion_sort.c
tests/compare/: test_compare.c
tests/data_structures/: test_list.c
tools/: run.sh
